# AdH_meshbuilder

./: .gitignore  CMakeLists.txt  README.md
builder/: CMakeLists.txt  generate_elements.c  generate_nodes.c
include/: cards.h  define.h  fnctn.h  global_header.h  macro.h  type.h
input/: CMakeLists.txt  read_dbl_field.c  read_int_field.c  read_mesh_data.c  reader.c
input/cardmaker/: cardmaker.c  cardmaker_input.inp
main/: CMakeLists.txt  meshbuilder.c
output/: CMakeLists.txt  writer.c
structs/: CMakeLists.txt  elem1d.c  elem1d.h  elem2d.h  mesh.c  mesh.h  vectors.h
test/: infile.inp  infiledbl.inp  read_dbl_field.c  read_int_field.c  scrip.sh
